syntax = "proto3";

package turnly.business_management.v1.organizations;

import "common.proto";

message Organization {
  string id = 1;
  string name = 2;
  string subdomain = 3;
  string status = 4;
  string branding_logo = 5;
  string branding_primary_color = 6;
  string branding_secondary_color = 7;
  string branding_design_type = 8;
  string branding_primary_background = 9;
  string branding_secondary_background = 10;
  bool disabled_telemetry = 11;
}

message GetOrganizationResponse {
  Organization data = 1;
  turnly.common.v1.Meta meta = 2;
}
